--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,26 @@
 body {
-  width: 1000px;
+  width: 960px;
   margin: 0 auto;
 }
 
 main {
   margin-top: 50px;
   height: 600px;
-  width: 1000px;
+  width: 960px;
   background-color: red;
+  padding-top: 60px;
 }
 
 img {
   display: inline;
+  width: 300px;
+  margin-right: 10px;
+}
+
+#img1 {
+  margin-left: 15px;
+}
+
+#img3 {
+  margin-right: 15px;
 }
