Fixed displlay of images on the page using css

--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,17 @@
 body {
-  width: 960px;
+  width: 1200px;
   margin: 0 auto;
 }
 
 main {
-  margin-top: 50px;
+  padding-top: 200px;
   height: 600px;
-  width: 960px;
-  padding-top: 10px;
+  width: 1200px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 img {
   display: inline;
-  width: 300px;
-  margin-right: 10px;
-}
-
-#img1 {
-  margin-left: 15px;
-}
-
-#img3 {
-  margin-right: 15px;
+  height: 250px;
 }
