--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 main {
-  padding-top: 200px;
-  height: 600px;
+  padding-top: 50px;
+  height: 400px;
   width: 1200px;
   margin: 0 auto;
   text-align: center;
@@ -15,4 +15,15 @@ img {
   display: inline;
   /* Specificially for the gif that I couldn't manually resize in Photoshop without losing animation */
   height: 240px;
+}
+
+#canvas-chart {
+  width: 1200px;
+  height: 800px;
+  text-align: center;
+}
+
+canvas {
+  background-color: red;
+  margin: 0 auto;
 }
