--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,12 @@ img {
   height: 240px;
 }
 
-#canvas-chart {
+/*#canvas-chart {
   width: 1200px;
   height: 800px;
   text-align: center;
 }
 
 canvas {
-  outline: 1px solid red;
   margin: 0 auto;
-  height: 500px;
-  width: 500px;
-}
+}*/
