--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,50 @@
 body {
-  width: 1200px;
+  width: 1300px;
   margin: 0 auto;
+  position: absolute;
 }
 
 main {
   height: 400px;
-  width: 1200px;
+  width: 1100px;
   margin: 0 auto;
   text-align: center;
 }
 
+h1 {
+  font-family: 'Oxygen';
+  display: block;
+}
+
 img {
-  display: inline;
   /* Specificially for the gif that I couldn't manually resize in Photoshop without losing animation */
   height: 240px;
+  /*flex-grow: 1;*/
+  border: 2px solid black;
+  opacity: .4;
+}
+
+img:hover {
+  transform: scale(1.1);
+  z-index: 500;
+  justify-content: space-around;
+  opacity: 1;
+}
+
+.flex-container {
+  padding-top: 10px;
+  display: flex;
+  width: 1000px;
+  margin: auto;
+  justify-content: space-around;
+}
+
+.image-section {
+  position: relative;
+  margin: 0 auto;
+}
+
+#user-form {
+  position: relative;
+  top: 40px;
 }
