--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,23 @@ button {
   background-color: #06404B;
   color: #D9D0C8;
   margin: 5px;
+  border: none;
 }
 
 button:hover {
   background-color: #6E5E50;
+  border: none;
+}
+
+button:active {
+  /*background-color: #417cb8;*/
+  box-shadow: 0 5px #27496d;
+  transform: translateY(2px);
+  border: none;
 }
 
 img:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
   z-index: 500;
   justify-content: space-around;
   opacity: 1;
