--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,95 @@
 body {
-  width: 1300px;
+  width: 100%;
   margin: 0 auto;
   position: absolute;
-  background-color: #3F6066;
+  background-color: #1A6657;
+  font-family: 'Oxygen', sans-serif;
 }
 
 main {
-  height: 400px;
-  width: 1100px;
+  height: 450px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
+  background-color: #fff;
+  position: absolute;
+  top: 100px;
 }
 
 h1 {
-  font-family: 'Oxygen';
-  display: block;
-  color: #D9D0C8;
+  color: #B2370A;
   text-shadow: 1px 1px 0 black;
 }
 
 img {
-  /* Specificially for the gif that I couldn't manually resize in Photoshop without losing animation */
+  /* Width specificed for the gif that I couldn't manually resize in Photoshop without losing animation */
   height: 240px;
-  /*flex-grow: 1;*/
-  opacity: .5;
+  border: 1px solid black;
+  z-index: 1;
+  position: relative;
 }
 
 button {
-  background-color: #06404B;
-  color: #D9D0C8;
-  margin: 5px;
+  color: #fff;
+  background-color: #40B29C;
   border: none;
+  border-radius: 15px;
+  box-shadow: 0 10px #0E362E;
+  display: inline-block;
+  margin: 0 10px 0 0;
+  padding: 5px 20px;
+  font-size: 25px;
+  line-height: 1.3;
+  appearance: none;
+}
+
+button:focus {
+  outline: none;
 }
 
 button:hover {
-  background-color: #6E5E50;
-  border: none;
+  background-color: #1A6657;
 }
 
 button:active {
-  /*background-color: #417cb8;*/
-  box-shadow: 0 5px #27496d;
-  transform: translateY(2px);
-  border: none;
+background-color: #1A6657;
+box-shadow: 0 5px #0E362E;
+transform: translateY(2px);
 }
 
 img:hover {
-  transform: scale(1.2);
-  z-index: 500;
-  justify-content: space-around;
-  opacity: 1;
-  box-shadow: 1px 1px 3px black;
-}
-
-#flex-container {
-  padding-top: 10px;
-  display: flex;
-  width: 1000px;
-  margin: auto;
-  justify-content: space-around;
+  transform: scale(1.1);
+  box-shadow: 1px 1px 5px gray;
 }
 
 .image-section {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
+  padding-top: 20px;
+  width: 100%;
+  height: 430px;
+  border: 1px solid black;
+}
+
+.image-section img:first-of-type {
+  margin-right: 30px;
+  margin-left: 30px
+}
+
+.image-section img:last-of-type {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 #canvas-section {
-  margin-top: 40px;
   background-color: #fff;
+  position: relative;
+  transform: scale(1.2);
+  z-index: 100;
 }
 
 #user-form {
   position: relative;
-  top: 40px;
+  top: 380px;
+  display: inline;
 }
