--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,37 @@
 body {
   width: 100%;
   margin: 0 auto;
-  position: absolute;
+  position: relative;
   background-color: #1A6657;
   font-family: 'Oxygen', sans-serif;
+  background-image: url('../img/bus.png');
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 main {
   height: 450px;
-  width: 100%;
-  margin: 0 auto;
   text-align: center;
-  background-color: #fff;
-  position: absolute;
-  top: 100px;
 }
 
 h1 {
   color: #B2370A;
   text-shadow: 1px 1px 0 black;
+  background-color: #fff;
+  width: 100%;
+  margin-bottom: 50px;
+  position: relative;
+  bottom: 20px;
+  border-bottom: 1px solid black;
 }
 
 img {
   /* Width specificed for the gif that I couldn't manually resize in Photoshop without losing animation */
-  height: 240px;
+  max-height: 240px;
   border: 1px solid black;
   z-index: 1;
   position: relative;
+  opacity: 1;
 }
 
 button {
@@ -59,26 +64,39 @@ transform: translateY(2px);
 
 img:hover {
   transform: scale(1.1);
-  box-shadow: 1px 1px 5px gray;
+  box-shadow: 1px 1px 5px black;
+  opacity: 1;
+  border: 1px solid #B2370A;
 }
 
 .image-section {
-  position: absolute;
-  margin: 0 auto;
-  padding-top: 20px;
-  width: 100%;
+  justify-content: center;
+  padding-top: 0px;
+  margin-top: 10px;
   height: 430px;
+  background-color: rgba(255,255,255,0.5);
   border: 1px solid black;
 }
 
-.image-section img:first-of-type {
+.first {
   margin-right: 30px;
   margin-left: 30px
 }
 
-.image-section img:last-of-type {
+
+.third {
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 60px;
+  height: 450px;
+  flex-shrink: 1;
+  /*background-color: rgba(255,255,255,0.5);*/
 }
 
 #canvas-section {
@@ -90,6 +108,5 @@ img:hover {
 
 #user-form {
   position: relative;
-  top: 380px;
-  display: inline;
+  top: 20px;
 }
